--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,9 @@
         </mat-form-field>
       </div>
       <div class="actions flex justify-end">
-        <button mat-raised-button color="primary">Login</button>
+        <button mat-raised-button color="primary" routerLink="/dashboard">
+          Login
+        </button>
       </div>
     </mat-card-content>
   </mat-card>
