--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,7 +18,7 @@
         </mat-form-field>
       </div>
       <div class="actions flex justify-end">
-        <button mat-raised-button color="primary" routerLink="/dashboard">
+        <button mat-raised-button color="primary" routerLink="/dashboard/home">
           Login
         </button>
       </div>
