--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
   >
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item>Link 1</a>
+      <a mat-list-item routerLink="./home">Home</a>
       <a mat-list-item>Link 2</a>
       <a mat-list-item routerLink="/">Logout</a>
     </mat-nav-list>
