--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -10,7 +10,12 @@
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="./home">Home</a>
-      <a mat-list-item>Link 2</a>
+      <a
+        mat-list-item
+        routerLink="./calculator"
+        matTooltip="Topic: Property and event binding"
+        >Calculator</a
+      >
       <a mat-list-item routerLink="/">Logout</a>
     </mat-nav-list>
   </mat-sidenav>
